chore(engine): webapps jdk17 support
- remove powermock
- update mockito to v4.3.1 & add mockito-inline for static tests
- fix deprecated mockito apis
- migrate tests from powermock to mockito

related to CAM-14389